public/assets/css/style.css
/* ... */
.sidebar-menu ul.mob_cat_list > li a.nav-link[aria-expanded="true"]{background-color: #ddd!important;}
.mobileMenu .sidebar-menu{height: 100%!important;}
/* end mobile menu */

@media (max-width: 1024px) {
  .barIcon,.topSection_w_cat{display: block;}
  .productFilters,.brandLogo,.notificationDropdown,
  .userDropdown,.primary_category,.introduction_sec{display: none;}
  .main_header{
    padding-left: 75px;
    position: fixed;
    width: 100%;
    top: 0px;
    left: 0px;
    z-index: 1000;
  }
  .page-wrapper{padding-top: 60px;}
  .top_header {border-bottom: none;border-top: 1px solid #282828;}
  .headersearch{max-width: 100%;}
}
@media(max-width:768px){
  .barIcon{left: 5px;}
  .main_header{padding-left: 50px;}
  .userAction{margin-left: 10px;}
  .userDropdown{margin-left: 10px;}
  .b_h_list,.ekom_tab{
    display: block;
    white-space: nowrap;
    overflow: hidden;
    overflow-x: auto;
  }
  .b_h_list > li,.ekom_tab > li{display: inline-block;white-space: nowrap;}
  .det_btnbox{max-width: 100%;}
  .doyouinput{margin-top: 10px;}
  .footer-heading{margin-top: 20px;}
  .ekfooter{padding-top: 10px;}
  .eKomUsefulLink{min-height: auto;}
  .copyrightText{text-align: center;margin-bottom: 20px;}
  .socialLinks{margin: auto;}
  .eKomonsummary p{margin-bottom: 10px!important;}
}
@media(max-width:576px){
  .bulkBuing{max-width: 100%;}
  .prod_name_stock h1{font-size: 18px!important;}
  .prod_image_box .img-card{height: auto;}
  .filterSelect.ms-auto {margin-left: inherit !important;}
  .ek-section{padding: 0px 10px;}
  .prod_image_box,.prod_name_stock{padding: 10px 0px!important;}
  .prod_detail_section{margin: 10px 0px;}
  .h_filterbox .checkboxdiv,
  .h_filterbox .filterbtn,
  .h_filterbox .filterSelect {margin-top: 2px!important;margin-bottom: 2px!important;}
  .promotional_banner,.promotional_banner .carousel-item{height: 186px;}
  .clientWords{padding: 15px;}
  .testimonalBlock {padding: 15px 20px 40px 20px;}
  .unitext{margin-bottom: 75px;}
}

